--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "element-plus": "^2.3.8",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.3",
+    "unplugin-icons": "^0.16.5",
+    "vite-plugin-inspect": "^0.7.35",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
